Fix layout problems

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Palanquin+Dark:400,500,600,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 h1,h2,h3,h4,h5,h6 {
@@ -45,7 +42,7 @@ h4 {
 
 body {
     color: rgba(0, 0, 0, 1);
-    font-family: "Lexend Deca", "Roboto";
+    font-family: 'Montserrat', sans-serif;
 }
 
 .md-header {
